Revision history for Perl extension Batch::Exec::Temp.

0.01  Tue Apr  2 21:24:06 2024
	- original version; created by h2xs 1.23 with options
		-AX --skip-exporter --use-new-tests -n Batch::Exec::Temp -b 5.10.0
