@@ -1,4 +1,4 @@
-# auto-generated by [perl_audit_test.sh] on [Wed 03 Apr 2024 23:49:51 AEDT]
+# auto-generated by [perl_audit_test.sh] on [Sat 13 Apr 2024 00:18:10 AEST]
 # audit results for [Batch-Exec-Temp / Batch::Exec::Temp / Temp.pm]:
 incl:	Carp          
 incl:	Data::Dumper  
@@ -13,12 +13,12 @@ attr:	autoheader    	UNDOCUMENTED	tested: ./t/01_general.t
 meth:	clean         	documented	tested: ./t/01_general.t
 attr:	cmd_os_version	UNDOCUMENTED	UNTESTED
 attr:	cmd_os_where  	UNDOCUMENTED	UNTESTED
-meth:	default       	documented	tested: ./t/00_basic.t ./t/01_general.t
+meth:	default       	documented	tested: ./t/00_basic.t
 attr:	dn_start      	UNDOCUMENTED	UNTESTED
 attr:	echo          	UNDOCUMENTED	tested: ./t/00_basic.t ./t/01_general.t
 attr:	ext           	documented	tested: ./t/00_basic.t ./t/01_general.t
 attr:	fatal         	UNDOCUMENTED	tested: ./t/00_basic.t
-meth:	hometmp       	documented	tested: ./t/01_general.t
+meth:	generate      	documented	UNTESTED
 attr:	log           	UNDOCUMENTED	UNTESTED
 meth:	mktmpdir      	documented	tested: ./t/01_general.t
 meth:	mktmpfile     	documented	tested: ./t/01_general.t
@@ -32,6 +32,6 @@ meth:	reset         	documented	tested: ./t/00_basic.t
 attr:	retain        	documented	tested: ./t/00_basic.t
 attr:	stdfd         	UNDOCUMENTED	UNTESTED
 attr:	template      	UNDOCUMENTED	UNTESTED
-meth:	tmpdir        	documented	tested: ./t/00_basic.t ./t/01_general.t
+meth:	tmpdir        	documented	tested: ./t/00_basic.t
 attr:	wsl_active    	UNDOCUMENTED	UNTESTED
 attr:	wsl_env       	UNDOCUMENTED	UNTESTED
